Changed Hello world with img and h2 to display simple profile data. Image file added in the folder images and used as resource in the img element in index.html file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    Hello World 
+    <div>
+        <img src="images/UNIUNI.png" alt="profile image" />
+        <h2>Neng UNIUNI</h2>
+     </div>
 </body>
 </html>
