Added ids for each profile element

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="images/UNIUNI.png" alt="profile image" />
-        <h2>Neng UNIUNI</h2>
+    <div id="profile-container">
+        <img id="profile-image" src="images/UNIUNI.png" alt="profile image" />
+        <h2 id="profile-name">Neng UNIUNI</h2>
      </div>
 </body>
 </html>
